fix change word overflow horizontal

--- a/sass/shared-screen.sass
+++ b/sass/shared-screen.sass
@@ -89,12 +89,12 @@
 
 @media screen and ( max-width:  1024px) and (orientation: landscape)
     .logo
-        bottom: 20%
+        bottom: 30%
         max-width: 300px
 
 @media screen and ( max-width:  768px) and (orientation: landscape)
     .logo
-        bottom: 20%
+        bottom: 30%
         max-width: 250px
         width: 40%
 
